objects/custom_object5__c.object
<CustomObject>
    <fields>
        <fullName>field2__c</fullName>
        <label>field2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>field3__c</fullName>
        <label>field3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>field4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>field4</label>
        <type>Checkbox</type>
    </fields>
    <label>custom_object5</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>custom_object4 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>custom_object5s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rule1</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule10</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule11</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check11</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule12</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check12</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule2</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule3</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule4</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check4</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule5</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule6</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check6</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule7</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check7</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule8</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check8</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rule9</fullName>
        <active>true</active>
        <errorConditionFormula>$User.IsActive</errorConditionFormula>
        <errorMessage>check9</errorMessage>
    </validationRules>
</CustomObject>